--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -47,6 +47,7 @@ nav a:hover {
 }
 
 article {
+    border: 2px solid blue;
     font-size: 16px;
     padding-top: .5em;
 }
@@ -119,4 +120,29 @@ article a:hover {
     font-size: 14px;
     color: #999999;
     margin-right: 1.2em;
+}
+
+.tag {
+    background-color: #ff0000;
+    border-radius: 3px;
+    font-size: 14px;
+    color: #ffffff;
+    display: inline-block;
+    padding: 0 5px;
+    margin-bottom: 8px;
+}
+
+.tag:hover {
+    text-decoration: none;
+    background-color: #ffffff;
+    color: #000000;
+    -webkit-transition: color .2s linear;
+}
+
+.search {
+    border: 0;
+    width: 6em;
+    text-align: center;
+    font-size: 1em;
+    margin: 0.5em 0;
 }
